# Django-DRF-App-Example

./: CHANGELOG.md  README.md  pyproject.toml
backend/: settings.py
